# IncludeOS_virtfs_c63

./: CMakeLists.txt  README.md
decoder_srcs/: c63dec.cpp
libc63/: CMakeLists.txt  common.cpp  common.hpp  io.cpp
src/: CMakeLists.txt
